--- a/packages/tools/docusaurus/docs/guides/components/create.mdx
+++ b/packages/tools/docusaurus/docs/guides/components/create.mdx
@@ -2,13 +2,22 @@
 sidebar_position: 2
 ---
 
+import Admonition from 'react-admonitions';
+
 # Create a component
 
 TODO: see Examples > Components > Interstitial for the steps that should be explained in more detail here. So every example can link to those general descriptions here. In turn we can link to illustrative examples from our texts here.
 
 ## Definition
 
-## Adaptation process
+## Creation process
+
+<Admonition type="tip" title="Adaptation process as a base line">
+  If you've read our guide ["Adapt a component"](./adapt.mdx) you probably already know this:
+
+This guide expects you to reduce the set of props offered by **kickstartDS** components, when used as a base component. Feel free to have a look at that guide first, if unsure.
+
+</Admonition>
 
 ### 1. Component Definition
 
