--- a/packages/tools/docusaurus/docs/guides/components/extend.mdx
+++ b/packages/tools/docusaurus/docs/guides/components/extend.mdx
@@ -2,4 +2,17 @@
 sidebar_position: 4
 ---
 
+import Admonition from 'react-admonitions';
+
 # Extend a component
+
+## Definition
+
+## Extension process
+
+<Admonition type="tip" title="Adaptation process as a base line">
+  If you've read our guide ["Adapt a component"](./adapt.mdx) you probably already know this:
+
+This guide expects you to reduce the set of props offered by **kickstartDS** components, while also customizing existing props, and even adding new ones. Feel free to have a look at that guide first, if unsure.
+
+</Admonition>
