docs(intro): add packages page, update integrations a bit

--- a/packages/tools/docusaurus/docs/integration/storybook/schema.mdx
+++ b/packages/tools/docusaurus/docs/integration/storybook/schema.mdx
@@ -13,9 +13,12 @@ It was slightly modified to generate bundles that can be imported for partial us
 
 **[Show me a working demo](https://www.kickstartds.com/storybook/?path=/story/base-content-box--image)** (click on the `JSON Schema` addon tab)
 
-TODO add Github link
+View the addon on **Github**: https://github.com/kickstartDS/storybook-addon-jsonschema
 
-![Teaser image](./assets/teaser.png)
+<img
+  src={require('./assets/teaser-jsonschema.png').default}
+  alt="Image showing the JSON Schema addon in action"
+/>
 
 **Table of contents:**
 
