docs: finalize more integration and intro pages

--- a/packages/tools/docusaurus/docs/guides/create/storybook.mdx
+++ b/packages/tools/docusaurus/docs/guides/create/storybook.mdx
@@ -8,7 +8,7 @@ import Admonition from 'react-admonitions';
 
 ## Overview
 
-TODO there should be a page detailing **Storybook**, and our usage of it, somewhere. Probably `Integrations`... write and link it
+TODO there should be a page detailing **Storybook**, and our usage of it, somewhere. Probably `Integrations`... write and link it. Could use the overview page [here](../../integration/storybook/index.md).
 
 ## Install **Storybook**
 
