--- a/packages/tools/docusaurus/docs/guides/examples/components/headline.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/headline.mdx
@@ -17,14 +17,14 @@ TODO describe workflow this stands for (adapt vs adopt)
 
 ### Structure
 
-| Property      | Description                              |
-| ------------- | ---------------------------------------- |
-| `level *`     | Level of headline to use                 |
-| `style`       | Style of headline to show                |
-| `text *`      | Text content of headline                 |
-| `sub`         | (Optional) Subheadline content           |
-| `switchOrder` | Switch order of headline and subheadline |
-| `spaceAfter`  | (Optional) spacing after headline        |
+| Property      | Type      | Description                              |
+| ------------- | --------- | ---------------------------------------- |
+| `level *`     | `enum`    | Level of headline to use                 |
+| `style`       | `enum`    | Style of headline to show                |
+| `text *`      | `string`  | Text content of headline                 |
+| `sub`         | `string`  | (Optional) Subheadline content           |
+| `switchOrder` | `boolean` | Switch order of headline and subheadline |
+| `spaceAfter`  | `enum`    | (Optional) spacing after headline        |
 
 ## 2. Component Creation
 
