--- a/packages/tools/docusaurus/docs/guides/examples/components/interstitial.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/interstitial.mdx
@@ -71,12 +71,12 @@ Finally being able to add a `link` with a link target (`link.target`) and and li
 
 This would leave us with the following properties (API) for our new component. Required fields are marked with a `*`:
 
-| Property      | Description              |
-| ------------- | ------------------------ |
-| `title *`     | Title to show            |
-| `body *`      | Body content to display  |
-| `link.target` | Page to link to          |
-| `link.text`   | Text to use for the link |
+| Property      | Type     | Description              |
+| ------------- | -------- | ------------------------ |
+| `title *`     | `string` | Title to show            |
+| `body *`      | `string` | Body content to display  |
+| `link.target` | `string` | Page to link to          |
+| `link.text`   | `string` | Text to use for the link |
 
 While directly helping us get a better grasp on our new component, these will also be used to write our `JSON Schema` later!
 
