--- a/packages/tools/docusaurus/docs/guides/examples/components/teaser-card.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/teaser-card.mdx
@@ -17,13 +17,13 @@ TODO describe workflow this stands for (adapt vs adopt)
 
 ### Structure
 
-| Property     | Description                          |
-| ------------ | ------------------------------------ |
-| `headline *` | Headline for the teaser card         |
-| `text *`     | Body text for the teaser card        |
-| `image`      | (Optional) image to display as cover |
-| `inverted`   | Show inverted version of card?       |
-| `target *`   | Target that should be linked         |
+| Property     | Type      | Description                          |
+| ------------ | --------- | ------------------------------------ |
+| `headline *` | `string`  | Headline for the teaser card         |
+| `text *`     | `string`  | Body text for the teaser card        |
+| `image`      | `string`  | (Optional) image to display as cover |
+| `inverted`   | `boolean` | Show inverted version of card?       |
+| `target *`   | `string`  | Target that should be linked         |
 
 ## 2. Component Creation
 
