--- a/packages/tools/docusaurus/docs/integration/storybook/schema.mdx
+++ b/packages/tools/docusaurus/docs/integration/storybook/schema.mdx
@@ -2,7 +2,9 @@
 sidebar_position: 1
 ---
 
-# JSON Schema Addon
+# JSON Schema
+
+## Overview
 
 Displays associated JSON Schema documentation using a rich `JSON Schema Explorer` interface, and adds a validating JSON Code Editor with semantic auto-complete to interact with your components, and copy configurations with ease.
 
@@ -27,7 +29,7 @@ View the addon on **Github**: https://github.com/kickstartDS/storybook-addon-jso
   - [Getting started](#getting-started)
   - [Advanced configuration](#advanced-configuration)
 
-## What it's for
+### What it's for
 
 Three things you can use this addon for:
 
@@ -35,7 +37,7 @@ Three things you can use this addon for:
 2. Configure components through Controls, copy the resulting JSON as a starting point or template for API-usage / data generation purposes in the `JSON Code Editor`
 3. Paste JSON to validate data or preview component state in the `JSON Code Editor`
 
-## Getting started
+### Getting started
 
 Prerequesite: Your components need to have JSON Schema files associated with them. Additionally schemas need to be dereferenced already, as $ref-resolution is not (a tested) part of this addon (yet? ... let us know in the issues if you need this).
 
@@ -78,6 +80,6 @@ export default {
 };
 ```
 
-## Advanced configuration
+### Advanced configuration
 
 This addon is still early, advanced configuration options will be added at a later date. Feel free to let us know in the issues if something specific is unclear, or doesn't work!
