--- a/packages/tools/docusaurus/docs/guides/examples/components/button.mdx
+++ b/packages/tools/docusaurus/docs/guides/examples/components/button.mdx
@@ -67,13 +67,13 @@ Finally, being able to mark a button as `disabled` should be possible!"
 
 Defining the structure of a component means finding the [component API](../../../foundations/components/component-api.md) for it:
 
-| Property   | Description                                    |
-| ---------- | ---------------------------------------------- |
-| `label *`  | Label shown on the button                      |
-| `target`   | Target that should be linked                   |
-| `variant`  | Variant of button used                         |
-| `size`     | Size the button should be shown in             |
-| `disabled` | Whether the button should be shown as disabled |
+| Property   | Type      | Description                                    |
+| ---------- | --------- | ---------------------------------------------- |
+| `label *`  | `string`  | Label shown on the button                      |
+| `target`   | `string`  | Target that should be linked                   |
+| `variant`  | `enum`    | Variant of button used                         |
+| `size`     | `enum`    | Size the button should be shown in             |
+| `disabled` | `boolean` | Whether the button should be shown as disabled |
 
 ## 2. Component Creation
 
