docs(collapsible-code): fix collapsible code styling for firefox

--- a/packages/tools/docusaurus/docs/foundations/layout/sections.mdx
+++ b/packages/tools/docusaurus/docs/foundations/layout/sections.mdx
@@ -20,15 +20,11 @@ You should make sure that the chosen background color always offers enough contr
 
 Link Guide "Create your own style variation" (TODO)
 
-<div className="section-background-table">
-
-| Setting   | Token                             | Description                                                                            |
-| --------- | --------------------------------- | -------------------------------------------------------------------------------------- |
-| `default` | `--l-section--background-default` | The default background color, shouldnt be percieved as a distinct surface              |
-| `bold`    | `--l-section--background-bold`    | A very prevelant color heavily drawing focus to the displayed content                  |
-| `accent`  | `--l-section--background-accent`  | A light color, making it disctinct from the default background without being too heavy |
-
-</div>
+|                                                                             | Setting   | Token                             | Description                                                                            |
+| --------------------------------------------------------------------------- | --------- | --------------------------------- | -------------------------------------------------------------------------------------- |
+| <div ks-theme="preview" className="color-preview color-bg"></div>           | `default` | `--l-section--background-default` | The default background color, shouldnt be percieved as a distinct surface              |
+| <div ks-theme="preview" className="color-preview background-primary"></div> | `bold`    | `--l-section--background-bold`    | A very prevelant color heavily drawing focus to the displayed content                  |
+| <div ks-theme="preview" className="color-preview background-accent"></div>  | `accent`  | `--l-section--background-accent`  | A light color, making it disctinct from the default background without being too heavy |
 
 ## Frame Width
 
