docs(integration): add content to most integration pages

--- a/packages/tools/docusaurus/docs/foundations/layout/bedrock.mdx
+++ b/packages/tools/docusaurus/docs/foundations/layout/bedrock.mdx
@@ -25,6 +25,7 @@ import {
 We use Bedrock as our library of choice when it comes to layouting:
 
 <Quote
+  image={require('./assets/bedrock-logo.png').default}
   byline="The Lodash of Web Layouts"
   source="BEDROCK LAYOUT PRIMITIVES"
   text="A collection of utility components that are designed to be used as building blocks for your web application's layout."
