--- a/packages/tools/docusaurus/docs/integration/storybook/schema.mdx
+++ b/packages/tools/docusaurus/docs/integration/storybook/schema.mdx
@@ -6,6 +6,10 @@ sidebar_position: 1
 
 ## Overview
 
+To integrate your [component API](../../foundations/components/component-api.md) / **JSON Schema** into **Storybook** you can install an addon we've written specifically for that purpose:
+
+## Storybook JSON Schema Addon
+
 Displays associated JSON Schema documentation using a rich `JSON Schema Explorer` interface, and adds a validating JSON Code Editor with semantic auto-complete to interact with your components, and copy configurations with ease.
 
 `JSON Schema Explorer` is based on the excellent [Atlassian JSON Schema Viewer](https://github.com/atlassian-labs/json-schema-viewer).
@@ -15,19 +19,13 @@ It was slightly modified to generate bundles that can be imported for partial us
 
 **[Show me a working demo](https://www.kickstartds.com/storybook/?path=/story/base-content-box--image)** (click on the `JSON Schema` addon tab)
 
-View the addon on **Github**: https://github.com/kickstartDS/storybook-addon-jsonschema
+View the addon on **Github**: https://github.com/kickstartDS/storybook-addon-jsonschema<br />
+Or directly on **Storybook**s page: https://storybook.js.org/addons/@kickstartds/storybook-addon-jsonschema
 
 <img
   src={require('./assets/teaser-jsonschema.png').default}
   alt="Image showing the JSON Schema addon in action"
 />
-
-**Table of contents:**
-
-- [JSON Schema Addon](#json-schema-addon)
-  - [What it's for](#what-its-for)
-  - [Getting started](#getting-started)
-  - [Advanced configuration](#advanced-configuration)
 
 ### What it's for
 
