--- a/packages/tools/docusaurus/docs/guides/components/adapt.mdx
+++ b/packages/tools/docusaurus/docs/guides/components/adapt.mdx
@@ -31,7 +31,7 @@ For a detailed example of adapting the `Button` component, have a look [at our c
 
 ## Adaptation process
 
-There's one big assupmtion made when choosing the adaptation process: you've already identified a component you'd like to use... and it already offers all the options you'll need. Let's call it the base component.
+There's one big assumption made when choosing the adaptation process: you've already identified a component you'd like to use... and it already offers all the options you'll need. Let's call it the base component.
 
 This greatly simplifies finding a component definition, as it means simply selecting props you'd like to use for yourself, from a well-defined set.
 
@@ -82,6 +82,8 @@ Let's keep using the `Button` as an example. We're starting with the following p
 | `newTab`        | Open link in new Tab                                            |
 | `className`     | Add additional css classes that should be applied to the button |
 | `component`     | Optional custom component identifier                            |
+
+TODO add `Type` to all tables in this page
 
 One potential set of props, it's the one used in our guide ["Adapt `Button` component"](../examples/components/button.mdx) if you're wondering, would be this:
 
