docs: minor fixes, formatting

--- a/packages/tools/docusaurus/docs/integration/storybook/stories.mdx
+++ b/packages/tools/docusaurus/docs/integration/storybook/stories.mdx
@@ -30,6 +30,11 @@ See below for an explanation what these can do for you!
 
 Our premade **Design Token** stories showcase your **Design Token** set instantly, neatly categorized and grouped by their semantic meaning established through **kickstartDS**.
 
+<img
+  src={require('./assets/teaser-designtoken.png').default}
+  alt="Image showing the Design Token addon in action"
+/>
+
 See the integration page about ["Design & Component Token" in this very section](./token.mdx#design-token-integration) to see a detailed description, and how you'd use them for your own Design System.
 
 ### 2. Premade component stories
